--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
    <div class="sideBar">
-       <h1 class="heading_board">BreakOut Game</h1>
+       <h1 class="heading_board">Brick Breaker</h1>
 
        <div class="alertText">
            <div class="scoreDiv">
@@ -41,9 +41,12 @@
            <br><br>
        </form>
        <div class="img">
-           <div id="play_again_btn"></div>
-           <div id="start_btn"></div>
+           <div id="play_again_btn">Play Again</div>
+           <div id="start_btn">Play Game</div>
            <img src="img/cute.gif" class="gif">
+       </div>
+       <div class="sound_icon">
+           <img src="img/SOUND_ON.png" alt="" id="sound_icon">
        </div>
 
 
